force-app/main/default/objects/SIR_HistoricoProceso__c/SIR_HistoricoProceso__c.object-meta.xml
<CustomObject>
    <label>Histórico Proceso</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Histórico Proceso Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Histórico Procesos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>