force-app/main/default/objects/SIR_HistoricoProceso__c/fields/SIR_Cliente__c.field-meta.xml
<CustomField>
    <fullName>SIR_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Histórico Procesos</relationshipLabel>
    <relationshipName>Historico_Procesos</relationshipName>
    <type>Lookup</type>
</CustomField>