force-app/main/default/objects/SIR_HistoricoProceso__c/fields/SIR_CodigoEstrategia__c.field-meta.xml
<CustomField>
    <fullName>SIR_CodigoEstrategia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CodigoEstrategia</label>
    <length>10</length>
    <type>Text</type>
</CustomField>