force-app/main/default/objects/SIR_HistoricoProceso__c/fields/SIR_Estrategia__c.field-meta.xml
<CustomField>
    <fullName>SIR_Estrategia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estrategia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>