force-app/main/default/objects/SIR_HistoricoProceso__c/fields/SIR_Proceso__c.field-meta.xml
<CustomField>
    <fullName>SIR_Proceso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso</label>
    <referenceTo>SIREC__SIREC_obj_proceso__c</referenceTo>
    <relationshipLabel>Histórico Procesos</relationshipLabel>
    <relationshipName>HistoricoProcesos</relationshipName>
    <type>Lookup</type>
</CustomField>