force-app/main/default/objects/SIR_HistoricoProceso__c/fields/SIR_Situacion__c.field-meta.xml
<CustomField>
    <fullName>SIR_Situacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Situación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>