force-app/main/default/objects/SIR_HistoricoProceso__c/fields/SIR_Tipo__c.field-meta.xml
<CustomField>
    <fullName>SIR_Tipo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>